# Shopping_AI_Agent

./: .env  README.md  call_llm.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: main-checkpoint.py
2_health_analysis/: Untitled.ipynb
3_vector_db/: vector_db_basics.ipynb
4_rag_basics/: rag.ipynb
5_single_agent/: product_query_agent.ipynb
6_shopping_agent_project/: app.py  store.db
