[project]
name = "agentic-ai-crash-course"
version = "0.1.0"
description = "Agentic AI crash course by Codebasics"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=0.3.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "ipykernel>=7.2.0",
    "notebook>=7.5.6",
    "pandas>=3.0.2",
    "fpdf2>=2.8.7",
    "pypdf>=6.11.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "sentence-transformers==2.7.0",
    "langchain-huggingface>=1.2.2",
    "numpy<2",
]
